[package]
name = "hemi"
version = "2.1.0"
edition = "2021"
authors = ["Mathew Lanier <contact@lectro.moe>"]

[dependencies]
dioxus = { version = "0.3.0", features = ["html"] }
dioxus-material-icons = "1.0.2"
dioxus-web = "0.3.0"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
serde_json = "1.0.81"
tailwindcss-to-rust-macros = "0.1.2"
web-sys = { version = "0.3.60", features = ["HtmlAudioElement"] }

# [patch.crates-io]
# dioxus = { git = 'https://github.com/dioxuslabs/dioxus' }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
