[package]
name = "hemi"
version = "4.3.0"
edition = "2021"
authors = ["kualta <contact@kualta.dev>"]

[dependencies]
dioxus = { version = "0.4.3", features = ["html"] }
dioxus-material-symbols = "0.4.3"
dioxus-web = "0.4.3"
getrandom = { version = "0.2.7", features = ["js"] }
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.81"
tailwindcss-to-rust-macros = "0.1.2"
wasm-logger = "0.2.0"
# wasm-bindgen = "=0.2.90"
web-sys = { version = "0.3.60", features = ["HtmlAudioElement"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
