[package]
name = "hemi"
version = "5.6.0"
edition = "2021"
authors = ["kualta <contact@kualta.dev>"]

[dependencies]
dioxus = { version = "0.5.6", features = ["web", "html"] }
dioxus-material-symbols = "0.4.3"
getrandom = { version = "0.2.7", features = ["js"] }
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.81"
tailwindcss-to-rust-macros = "0.1.2"
wasm-logger = "0.2.0"
wasm-bindgen = "=0.2.92"
wasm-bindgen-cli = "=0.2.92"
web-sys = { version = "0.3.60", features = ["HtmlAudioElement"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 2
lto = true

[profile.dev.package."*"]
opt-level = 3
